app/Athena/Templates/template1/NetworkPolicy/juice-shop-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: juice-shop-policy
  labels:
    lab: juice-shop
spec:
  podSelector:
    matchLabels:
      lab: juice-shop
  ingress:
    - from:
      - podSelector:
          matchLabels: 
            lab: juice-shop
      - namespaceSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
  egress:
    - to:
      - podSelector:
          matchLabels:
            lab: juice-shop
      - namespaceSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
